Add MySQL startup scripts and unify user roles as ADMIN/OPERATOR in DB and RBAC.
Co-authored-by: Cursor <cursoragent@cursor.com>